<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lite Launcher</string>
    <string name="search_hint">Search apps…</string>
    <string name="empty_slot">+</string>
    <string name="no_apps_found">No apps found</string>
    <string name="settings">Settings</string>
    <string name="accent_color">Accent Color</string>
    <string name="background_image">Background</string>
    <string name="show_system_apps">Show system apps</string>
    <string name="use_wallpaper">Use system wallpaper</string>
    <string name="set_default_launcher">Set as default launcher</string>
    <string name="pick_app">Pick an app</string>
    <string name="remove_favorite">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_background">None</string>
</resources>
